--- a/app/src/main/res/layout/fragment_be_lucky_game_item.xml
+++ b/app/src/main/res/layout/fragment_be_lucky_game_item.xml
@@ -10,7 +10,7 @@
         android:id="@+id/playerName"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:text="text"
+        android:text=""
         android:textStyle="bold"
         android:textSize="20dp"/>
 
