--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <com.lucasri.aperomix.views.AperoMixTextView
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
@@ -17,6 +18,7 @@
 
     <EditText
         android:id="@+id/fragment_login_email_edt"
+        android:layout_below="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/background_edt"
@@ -27,6 +29,7 @@
 
     <EditText
         android:id="@+id/fragment_login_password_edt"
+        android:layout_below="@+id/fragment_login_email_edt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/background_edt"
@@ -37,6 +40,7 @@
 
     <Button
         android:id="@+id/fragment_login_login_btn"
+        android:layout_below="@+id/fragment_login_password_edt"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="@drawable/border_btn"
@@ -45,9 +49,10 @@
         android:textAllCaps="false"/>
 
     <LinearLayout
+        android:layout_below="@+id/fragment_login_login_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp">
 
         <TextView
@@ -74,12 +79,21 @@
             android:id="@+id/fragment_login_appTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/app_name"
-            android:textSize="16sp"
-            android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="5dp"/>
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="5dp"
+            android:text="@string/app_name"
+            android:textSize="16sp" />
 
     </RelativeLayout>
 
-</LinearLayout>
+    <ProgressBar
+        android:id="@+id/fragment_login_progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_centerHorizontal="true"
+        android:indeterminate="true"
+        android:visibility="gone"/>
+
+</RelativeLayout>
