--- a/app/src/main/res/layout/fragment_pmu_param.xml
+++ b/app/src/main/res/layout/fragment_pmu_param.xml
@@ -9,6 +9,7 @@
     >
 
         <androidx.recyclerview.widget.RecyclerView
+            android:paddingTop="50dp"
             android:id="@+id/pmu_param_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
