--- a/app/src/main/res/layout/fragment_game_details.xml
+++ b/app/src/main/res/layout/fragment_game_details.xml
@@ -5,103 +5,110 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="10dp"
-        >
+        android:layout_height="match_parent">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/fragment_details_game_img"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            app:cardCornerRadius="10dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="2dp"
-            android:backgroundTint="@android:color/holo_blue_dark">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="10dp"
+            >
 
-            <ImageView
+            <androidx.cardview.widget.CardView
+                android:id="@+id/fragment_details_game_img"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                app:cardCornerRadius="10dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginLeft="2dp"
+                android:backgroundTint="@android:color/holo_blue_dark">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/logo_v1"/>
+
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:id="@+id/fragment_details_games_title"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/logo_v1"/>
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/fragment_details_game_img"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginTop="30dp"
+                android:layout_marginLeft="20dp"
+                />
 
-        </androidx.cardview.widget.CardView>
+            <TextView
+                android:id="@+id/fragment_details_games_nbPlayer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/fragment_details_games_title"
+                android:layout_toRightOf="@+id/fragment_details_game_img"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"/>
 
-        <TextView
-            android:id="@+id/fragment_details_games_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/fragment_details_game_img"
-            android:textColor="@android:color/black"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="20dp"
-            />
+            <TextView
+                android:id="@+id/fragment_details_games_duration"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/fragment_details_games_nbPlayer"
+                android:layout_toRightOf="@+id/fragment_details_game_img"
+                android:layout_marginLeft="20dp"/>
 
-        <TextView
-            android:id="@+id/fragment_details_games_nbPlayer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/fragment_details_games_title"
-            android:layout_toRightOf="@+id/fragment_details_game_img"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"/>
+            <Button
+                android:id="@+id/fragment_details_games_playBtn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/fragment_details_games_duration"
+                android:layout_marginTop="50dp"
+                android:text="@string/BeLucky_jouer"
+                android:textAllCaps="false"
+                android:background="@drawable/border_btn"
+                android:textStyle="bold"
+                android:layout_marginRight="2dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginBottom="10dp"/>
 
-        <TextView
-            android:id="@+id/fragment_details_games_duration"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/fragment_details_games_nbPlayer"
-            android:layout_toRightOf="@+id/fragment_details_game_img"
-            android:layout_marginLeft="20dp"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/fragment_details_games_recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_below="@id/fragment_details_games_playBtn"/>
 
-        <Button
-            android:id="@+id/fragment_details_games_playBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/fragment_details_games_duration"
-            android:layout_marginTop="50dp"
-            android:text="@string/BeLucky_jouer"
-            android:textAllCaps="false"
-            android:background="@drawable/border_btn"
-            android:textStyle="bold"
-            android:layout_marginRight="2dp"
-            android:layout_marginLeft="2dp"
-            android:layout_marginBottom="10dp"/>
+            <TextView
+                android:id="@+id/fragment_details_games_description_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginLeft="2dp"
+                android:layout_below="@id/fragment_details_games_recyclerView"
+                android:text="@string/BeLucky_description"
+                android:textStyle="bold"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/fragment_details_games_recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_below="@id/fragment_details_games_playBtn"/>
+            <TextView
+                android:id="@+id/fragment_details_games_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginBottom="20dp"
+                android:layout_below="@id/fragment_details_games_description_title"
+                />
 
-        <TextView
-            android:id="@+id/fragment_details_games_description_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="2dp"
-            android:layout_marginLeft="2dp"
-            android:layout_below="@id/fragment_details_games_recyclerView"
-            android:text="@string/BeLucky_description"
-            android:textStyle="bold"
-            android:textColor="@android:color/black"
-            android:textSize="20sp"
-            />
+        </RelativeLayout>
 
-        <TextView
-            android:id="@+id/fragment_details_games_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="2dp"
-            android:layout_marginLeft="2dp"
-            android:layout_below="@id/fragment_details_games_description_title"
-            />
-
-    </RelativeLayout>
+    </ScrollView>
 
 </RelativeLayout>
