--- a/app/src/main/res/layout/fragment_select_game.xml
+++ b/app/src/main/res/layout/fragment_select_game.xml
@@ -22,12 +22,13 @@
         <com.lucasri.aperomix.views.AperoMixTextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Les jeux AperoMix..."
-            android:textColor="@android:color/black"
-            android:layout_centerVertical="true"
             android:layout_marginLeft="80dp"
             android:layout_marginRight="20dp"
-            android:textSize="30sp"/>
+            android:text="Les jeux AperoMix..."
+            android:layout_centerVertical="true"
+
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/selectGame_title_textSize" />
 
     </RelativeLayout>
 
