--- a/app/src/main/res/layout/fragment_select_game_item.xml
+++ b/app/src/main/res/layout/fragment_select_game_item.xml
@@ -22,6 +22,7 @@
             android:id="@+id/imgGame"
             android:layout_width="150dp"
             android:layout_height="120dp"
+            android:layout_centerHorizontal="true"
             app:srcCompat="@drawable/background" />
 
         <com.lucasri.aperomix.views.AperoMixTextView
