--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -9,7 +9,7 @@
         android:id="@+id/fragment_account_userName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/account_title_marginTop"
         android:gravity="center"
         android:textStyle="bold"
         android:textColor="@android:color/black"
@@ -28,7 +28,7 @@
         android:layout_below="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="@dimen/account_marginTop"
         android:gravity="center"
         android:textStyle="bold"
         android:textColor="@android:color/black"
@@ -53,7 +53,7 @@
         android:layout_below="@id/fragment_account_email"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="@dimen/account_marginTop"
         android:orientation="horizontal"
         android:background="#F7F7F7"
         >
