--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -9,11 +9,11 @@
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="@dimen/login_title_marginTop"
         android:layout_marginBottom="15dp"
         android:text="@string/fragment_login_title"
         android:textColor="@android:color/black"
-        android:textSize="50dp"
+        android:textSize="@dimen/login_title_textSize"
         android:gravity="center"/>
 
     <EditText
@@ -24,6 +24,7 @@
         android:background="@drawable/background_edt"
         android:hint="@string/fragment_login_email"
         android:padding="15dp"
+        android:textSize="@dimen/login_edtTxt_textSize"
         android:layout_margin="15dp"
         android:inputType="textEmailAddress"/>
 
@@ -34,6 +35,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/background_edt"
         android:hint="@string/fragment_login_password"
+        android:textSize="@dimen/login_edtTxt_textSize"
         android:padding="15dp"
         android:layout_margin="15dp"
         android:inputType="textPassword"/>
@@ -42,7 +44,7 @@
         android:id="@+id/fragment_login_login_btn"
         android:layout_below="@+id/fragment_login_password_edt"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="@dimen/login_loginBtn_height"
         android:background="@drawable/border_btn"
         android:layout_margin="15dp"
         android:text="@string/fragment_login_login"
@@ -53,11 +55,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:orientation="horizontal"
         android:layout_marginTop="25dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="@dimen/login_registerBtn_textSize"
             android:text="@string/fragment_login_no_account"/>
 
         <TextView
@@ -65,6 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
+            android:textSize="@dimen/login_registerBtn_textSize"
             android:text="@string/fragment_login_register"
             android:textColor="@android:color/black"
             android:textStyle="bold"/>
