--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".controllers.activities.GameContainer"
+    tools:context=".controllers.activities.GameContainerActivity"
     android:background="@color/colorPrimary">
 
     <androidx.cardview.widget.CardView
@@ -16,10 +16,10 @@
         android:outlineAmbientShadowColor="@color/colorPrimary">
 
         <FrameLayout
-        android:id="@+id/activity_main_frame"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/activity_game_container_toolbar"/>
+            android:id="@+id/activity_main_frame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/activity_game_container_toolbar"/>
 
     </androidx.cardview.widget.CardView>
 
