Add Chat and Dynamic Link for sharing

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -112,12 +112,12 @@
                         app:srcCompat="@drawable/ic_account" />
 
                     <ImageView
-                        android:id="@+id/fragment_main_support_btn"
+                        android:id="@+id/fragment_main_chat_btn"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:padding="10dp"
                         android:layout_marginRight="10dp"
-                        app:srcCompat="@drawable/ic_support"/>
+                        app:srcCompat="@drawable/ic_message"/>
 
                     <ImageView
                         android:id="@+id/fragment_main_share_btn"
